Add support to update configs via Rest API
